...
    <string name="addExpense">Add expense</string>
    <string name="moneyString1">You have</string>
    <string name="moneyString2">left</string>
    <string name="details">Details</string>
    <string name="createdDate">Created on</string>
    <string name="close">Close</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="payAlert">Are you sure you want to pay this expense:</string>
    <string name="deleteAlert">Are you sure you want to delete this expense:</string>
    <string name="noData">No data to display</string>
    <string name="retrievalDate">Retrieval date</string>
    <string name="NoResult">No results found</string>
...
